--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+:root {
+    --text-glow-colour: #00e660;
+    --highlight-glow-colour: #00c4e6;
+}
+
 html, body {
     height: 100%;
     margin: 0;
@@ -11,4 +16,150 @@ html, body {
 
 .background {
     z-index: -1;
+}
+
+/* fonts */
+
+@font-face {
+    font-family: "Bebas";
+    src: url("../fonts/BebasNeue-Regular.ttf");
+}
+
+.font-bebas {
+    font-family: "Bebas";
+}
+
+@font-face {
+    font-family: "Chivo";
+    src: url("../fonts/ChivoMono-Black.ttf");
+}
+
+.font-chivo {
+    font-family: "Chivo";
+}
+
+@font-face {
+    font-family: "Jolly";
+    src: url("../fonts/JollyLodger-Regular.ttf");
+}
+
+.font-jolly {
+    font-family: "Jolly";
+}
+
+@font-face {
+    font-family: "Barcode";
+    src: url("../fonts/LibreBarcode39Text-Regular.ttf");
+}
+
+.font-barcode {
+    font-family: "Barcode";
+}
+
+@font-face {
+    font-family: "Mina";
+    src: url("../fonts/Mina-Regular.ttf");
+}
+
+.font-mina {
+    font-family: "Mina";
+}
+
+@font-face {
+    font-family: "Pacifico";
+    src: url("../fonts/Pacifico-Regular.ttf");
+}
+
+.font-pacifico {
+    font-family: "Pacifico";
+}
+
+@font-face {
+    font-family: "Puppies";
+    src: url("../fonts/PuppiesPlay-Regular.ttf");
+}
+
+.font-puppies {
+    font-family: "Puppies";
+}
+
+@font-face {
+    font-family: "Doodle";
+    src: url("../fonts/RubikDoodleTriangles-Regular.ttf");
+}
+
+.font-doodle {
+    font-family: "Doodle";
+}
+
+@font-face {
+    font-family: "Paint";
+    src: url("../fonts/RubikWetPaint-Regular.ttf");
+}
+
+.font-paint {
+    font-family: "Paint";
+}
+
+@font-face {
+    font-family: "terminal";
+    src: url("../fonts/3270Condensed-Regular.ttf");
+}
+
+.terminal {
+    font-family: "terminal";
+}
+
+.blink {
+    animation: blinker 1s linear infinite;
+}
+
+.title-disappear {
+    
+    animation: disappear 4s linear 1 forwards;
+}
+
+.main-appearance {
+    animation: appear 0.1s linear 1 forwards;
+}
+
+.block-wrapper {
+    @apply flex-col items-center justify-center hidden h-full w-full text-green-400 px-10 py-5;
+    background-color: #004F00;
+
+    text-shadow: 0 0 10px #3f3, 0 0 20px #3f3, 0 0 30px var(--text-glow-colour), 0 0 30px var(--text-glow-colour), 0 0 50px var(--text-glow-colour), 0 0 60px var(--text-glow-colour), 0 0 80px var(--text-glow-colour);
+}
+
+.highlight {
+    text-shadow: 0 0 10px #33f, 0 0 20px #33f, 0 0 30px var(--highlight-glow-colour), 0 0 30px var(--highlight-glow-colour), 0 0 60px var(--highlight-glow-colour), 0 0 70px var(--highlight-glow-colour), 0 0 100px var(--highlight-glow-colour);
+}
+
+@keyframes blinker {
+    50% {
+        opacity: 0;
+    }
+}
+
+@keyframes disappear {
+    0% {
+        opacity: 1;
+    }
+    10% {
+        opacity: 1;
+        /* zoom in */
+        transform: scale(1.3);
+    }
+    100% {
+        opacity: 0;
+        transform: scale(30);
+    }
+}
+
+@keyframes appear {
+    0% {
+        transform: scale(0);
+    }
+    100% {
+        transform: scale(1);
+    }
 }
