--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -542,16 +542,8 @@ video {
   margin: auto;
 }
 
-.ml-auto {
-  margin-left: auto;
-}
-
-.mr-auto {
-  margin-right: auto;
-}
-
-.mt-6 {
-  margin-top: 1.5rem;
+.mt-3 {
+  margin-top: 0.75rem;
 }
 
 .block {
@@ -560,6 +552,10 @@ video {
 
 .flex {
   display: flex;
+}
+
+.hidden {
+  display: none;
 }
 
 .aspect-square {
@@ -612,22 +608,26 @@ video {
   background-color: rgb(88 28 135 / var(--tw-bg-opacity));
 }
 
-.bg-red-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
-}
-
 .p-3 {
   padding: 0.75rem;
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .text-center {
   text-align: center;
 }
 
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-6xl {
@@ -635,14 +635,19 @@ video {
   line-height: 1;
 }
 
-.text-8xl {
-  font-size: 6rem;
-  line-height: 1;
-}
-
 .text-9xl {
   font-size: 8rem;
   line-height: 1;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -673,7 +678,7 @@ video {
   --text-glow-colour: #00e660;
   --highlight-glow-colour: #e60000;
   --tip-glow-colour: #f0f;
-  --terminal-background-colour: #003000;
+  --terminal-background-colour: rgba(0, 150, 0, 0.7);
   --planet-radius: 100%;
 }
 
@@ -686,6 +691,10 @@ html, body {
 
 .background {
   z-index: -1;
+}
+
+.background-disappear {
+  animation: bdisappear 1s linear 1 forwards;
 }
 
 @font-face {
@@ -710,8 +719,11 @@ html, body {
   animation: appear 0.2s linear 1 forwards;
 }
 
+.main-disappear {
+  animation: mdisappear 0.2s linear 1 forwards;
+}
+
 .block-wrapper {
-  display: none;
   height: 100%;
   width: 100%;
   flex-direction: column;
@@ -724,10 +736,12 @@ html, body {
   --tw-text-opacity: 1;
   color: rgb(74 222 128 / var(--tw-text-opacity));
   text-shadow: 0 0 10px #3f3, 0 0 30px var(--text-glow-colour), 0 0 50px var(--text-glow-colour);
-  background-color: black;
-  background-image: radial-gradient(
-        rgba(0, 150, 0, 0.7), black 120%
-    );
+  background-color: var(--terminal-background-colour);
+  background-image: 
+    radial-gradient(
+        var(--terminal-background-colour), black 120%
+    ),
+    repeating-linear-gradient(rgba(0,0,0,0.15), rgba(0,0,0,0.15) 5px, transparent 5px, transparent 10px);
 }
 
 .tip-text {
@@ -738,6 +752,7 @@ html, body {
   --tw-text-opacity: 1;
   color: rgb(254 242 242 / var(--tw-text-opacity));
   cursor: pointer;
+  color: #f00;
   text-shadow: 0 0 10px #f33, 0 0 30px var(--highlight-glow-colour), 0 0 50px var(--highlight-glow-colour);
 }
 
@@ -759,9 +774,35 @@ html, body {
     transform: scale(1.3);
   }
 
+  60% {
+    opacity: 0;
+  }
+
   100% {
     opacity: 0;
     transform: scale(30);
+  }
+}
+
+@keyframes mdisappear {
+  0% {
+    opacity: 1;
+    pointer-events: none;
+  }
+
+  100% {
+    opacity: 0;
+    transform: scale(0);
+  }
+}
+
+@keyframes bdisappear {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
   }
 }
 
@@ -796,15 +837,15 @@ html, body {
   width: var(--planet-radius);
   height: var(--planet-radius);
   transform-style: preserve-3d;
-  animation: spin 60s infinite linear;
-}
-
-div.equator {
-  transform:rotateX(90deg);
+  animation: spin 30s infinite linear;
 }
 
 .sphere > div {
   border: solid 10px #0c0;
+  background-color: black;
+  background-image: radial-gradient(
+        black, var(--terminal-background-colour) 170%
+    );
   border-radius: 50%;
   height: var(--planet-radius);
   opacity: 0.8;
@@ -812,30 +853,95 @@ div.equator {
   width: var(--planet-radius);
 }
 
+div.equator {
+  background-color: rgba(0,0,0,0);
+  background-image: none;
+  transform:rotateX(90deg);
+}
+
 div.tropic {
+  background-color: rgba(0,0,0,0);
+  background-image: none;
   height: calc(var(--planet-radius) - calc(var(--planet-radius)*0.14));
   margin: calc(var(--planet-radius)*0.07);
   width: calc(var(--planet-radius) - calc(var(--planet-radius)*0.14));
 }
 
 div.north {
-  transform: translateY(calc(-0.33 * var(--planet-radius))) rotateX(90deg);
+  transform: translateY(calc(-0.3 * var(--planet-radius))) rotateX(90deg);
 }
 
 div.south {
-  transform: translateY(calc(0.33 * var(--planet-radius))) rotateX(90deg);
+  transform: translateY(calc(0.3 * var(--planet-radius))) rotateX(90deg);
 }
 
 @keyframes spin {
   0% {
-    transform: rotateX(15deg) rotateY(0) rotateZ(15deg);
+    transform: rotateX(20deg) rotateY(0) rotateZ(20deg);
   }
 
   50% {
-    transform: rotateX(-15deg) rotateY(180deg) rotateZ(-15deg);
+    transform: rotateX(-20deg) rotateY(180deg) rotateZ(-20deg);
   }
 
   100% {
-    transform: rotateX(15deg) rotateY(360deg) rotateZ(15deg);
+    transform: rotateX(20deg) rotateY(360deg) rotateZ(20deg);
+  }
+}
+
+.menu-sel {
+  cursor: pointer;
+}
+
+.menu-sel:hover {
+  /* transition to red text */
+  color: #f00;
+  text-shadow: 0 0 10px #f33, 0 0 30px var(--highlight-glow-colour), 0 0 50px var(--highlight-glow-colour);
+  /* transition part */
+  transition: color 0.5s ease-in-out;
+}
+
+@media (min-width: 768px) {
+  .md\:ml-auto {
+    margin-left: auto;
+  }
+
+  .md\:mr-auto {
+    margin-right: auto;
+  }
+
+  .md\:mt-6 {
+    margin-top: 1.5rem;
+  }
+
+  .md\:aspect-square {
+    aspect-ratio: 1 / 1;
+  }
+
+  .md\:h-full {
+    height: 100%;
+  }
+
+  .md\:flex-row {
+    flex-direction: row;
+  }
+
+  .md\:p-20 {
+    padding: 5rem;
+  }
+
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
+  .md\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+
+  .md\:text-9xl {
+    font-size: 8rem;
+    line-height: 1;
   }
 }
