--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
     --highlight-glow-colour: #e60000;
     --tip-glow-colour: #f0f;
     
-    --terminal-background-colour: #003000;
+    --terminal-background-colour: rgba(0, 150, 0, 0.7);
 
     --planet-radius: 100%;
 }
@@ -21,6 +21,10 @@ html, body {
 
 .background {
     z-index: -1;
+}
+
+.background-disappear {
+    animation: bdisappear 1s linear 1 forwards;
 }
 
 @font-face {
@@ -45,15 +49,21 @@ html, body {
     animation: appear 0.2s linear 1 forwards;
 }
 
+.main-disappear {
+    animation: mdisappear 0.2s linear 1 forwards;
+}
+
 .block-wrapper {
-    @apply flex-col items-center justify-center hidden h-full w-full text-green-400 px-10 py-5;
+    @apply flex-col items-center justify-center h-full w-full text-green-400 px-10 py-5;
 
     text-shadow: 0 0 10px #3f3, 0 0 30px var(--text-glow-colour), 0 0 50px var(--text-glow-colour);
 
-    background-color: black;
-    background-image: radial-gradient(
-        rgba(0, 150, 0, 0.7), black 120%
-    );
+    background-color: var(--terminal-background-colour);
+    background-image: 
+    radial-gradient(
+        var(--terminal-background-colour), black 120%
+    ),
+    repeating-linear-gradient(rgba(0,0,0,0.15), rgba(0,0,0,0.15) 5px, transparent 5px, transparent 10px);
 }
 
 .tip-text {
@@ -63,6 +73,7 @@ html, body {
 .highlight {
     @apply text-red-50;
     cursor: pointer;
+    color: #f00;
     text-shadow: 0 0 10px #f33, 0 0 30px var(--highlight-glow-colour), 0 0 50px var(--highlight-glow-colour);
 }
 
@@ -82,9 +93,32 @@ html, body {
         /* zoom in */
         transform: scale(1.3);
     }
+    60% {
+        opacity: 0;
+    }
     100% {
         opacity: 0;
         transform: scale(30);
+    }
+}
+
+@keyframes mdisappear {
+    0% {
+        opacity: 1;
+        pointer-events: none;
+    }
+    100% {
+        opacity: 0;
+        transform: scale(0);
+    }
+}
+
+@keyframes bdisappear {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
     }
 }
 
@@ -121,15 +155,15 @@ html, body {
     height: var(--planet-radius);
     transform-style: preserve-3d;
 
-    animation: spin 60s infinite linear;
-}
-
-div.equator {
-    transform:rotateX(90deg);
+    animation: spin 30s infinite linear;
 }
 
 .sphere > div {
     border: solid 10px #0c0;
+    background-color: black;
+    background-image: radial-gradient(
+        black, var(--terminal-background-colour) 170%
+    );
     border-radius: 50%;
     height: var(--planet-radius);
     opacity: 0.8;
@@ -137,28 +171,49 @@ div.equator {
     width: var(--planet-radius);
 }
 
+div.equator {
+    background-color: rgba(0,0,0,0);
+    background-image: none;
+    transform:rotateX(90deg);
+}
+
 div.tropic {
+    background-color: rgba(0,0,0,0);
+    background-image: none;
     height: calc(var(--planet-radius) - calc(var(--planet-radius)*0.14));
     margin: calc(var(--planet-radius)*0.07);
     width: calc(var(--planet-radius) - calc(var(--planet-radius)*0.14));
 }
 
 div.north {
-    transform: translateY(calc(-0.33 * var(--planet-radius))) rotateX(90deg);
+    transform: translateY(calc(-0.3 * var(--planet-radius))) rotateX(90deg);
 }
 
 div.south {
-    transform: translateY(calc(0.33 * var(--planet-radius))) rotateX(90deg);
+    transform: translateY(calc(0.3 * var(--planet-radius))) rotateX(90deg);
 }
 
 @keyframes spin {
     0% {
-        transform: rotateX(15deg) rotateY(0) rotateZ(15deg);
+        transform: rotateX(20deg) rotateY(0) rotateZ(20deg);
     }
     50% {
-        transform: rotateX(-15deg) rotateY(180deg) rotateZ(-15deg);
+        transform: rotateX(-20deg) rotateY(180deg) rotateZ(-20deg);
     }
     100% {
-        transform: rotateX(15deg) rotateY(360deg) rotateZ(15deg);
+        transform: rotateX(20deg) rotateY(360deg) rotateZ(20deg);
     }
+}
+
+.menu-sel {
+    cursor: pointer;
+}
+
+.menu-sel:hover {
+    /* transition to red text */
+    color: #f00;
+    text-shadow: 0 0 10px #f33, 0 0 30px var(--highlight-glow-colour), 0 0 50px var(--highlight-glow-colour);
+
+    /* transition part */
+    transition: color 0.5s ease-in-out;
 }
